NetBSD Problem Report #47656

From jmmv@netbsd.org  Sat Mar 16 05:31:37 2013
Return-Path: <jmmv@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id 8415963C07C
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 16 Mar 2013 05:31:37 +0000 (UTC)
Message-Id: <20130316053137.6384814A382@mail.netbsd.org>
Date: Sat, 16 Mar 2013 05:31:37 +0000 (UTC)
From: jmmv@netbsd.org
Reply-To: jmmv@netbsd.org
To: gnats-bugs@NetBSD.org
Subject: Broken ZFS tests
X-Send-Pr-Version: 3.95

>Number:         47656
>Category:       kern
>Synopsis:       Broken ZFS tests
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Mar 16 05:35:00 +0000 2013
>Closed-Date:    Thu Dec 13 10:26:16 +0000 2018
>Last-Modified:  Thu Dec 13 10:26:16 +0000 2018
>Originator:     Julio Merino
>Release:        NetBSD 6.99.17
>Organization:

>Environment:


System: NetBSD nbair.virtual.network 6.99.17 NetBSD 6.99.17 (GENERIC) #13: Sat Mar 16 11:23:16 JST 2013 jmmv@nbair.virtual.network:/home/jmmv/os/netbsd/amd64/obj/home/jmmv/os/netbsd/src/sys/arch/amd64/compile/GENERIC amd64
Architecture: x86_64
Machine: amd64
>Description:
	A bunch of ZFS tests are broken.  The tests are:

	fs/vfs/t_full:zfs_fillfs  ->  failed: filled file system over size limit  [15.197s]
	fs/vfs/t_unpriv:zfs_dirperms  ->  failed: open: Operation not permitted  [0.385s]
	fs/vfs/t_unpriv:zfs_flags  ->  failed: chflags: Operation not supported  [0.624s]
	fs/vfs/t_unpriv:zfs_owner  ->  failed: chown: Operation not permitted  [0.387s]
	fs/vfs/t_unpriv:zfs_times  ->  failed: utimes: Operation not permitted  [0.455s]
	fs/vfs/t_vnops:zfs_attrs  ->  failed: /home/jmmv/os/netbsd/src/tests/fs/vfs/t_vnops.c:569: sb.st_mode != sb2.st_mode  [0.974s]
	fs/vfs/t_vnops:zfs_dir_notempty  ->  failed: non-empty directory removed succesfully  [0.293s]
	fs/vfs/t_vnops:zfs_fcntl_getlock_pids  ->  failed: /home/jmmv/os/netbsd/src/tests/fs/vfs/t_vnops.c:738: rump_sys_fcntl(fd[i], 8, &lock[i]): Operation not supported  [0.935s]
	fs/vfs/t_vnops:zfs_fcntl_lock  ->  failed: /home/jmmv/os/netbsd/src/tests/fs/vfs/t_vnops.c:604: rump_sys_fcntl(fd, 8, &l): Operation not supported  [0.401s]
	fs/vfs/t_vnops:zfs_rename_dir  ->  failed: rename 3: Invalid argument  [0.542s]

	It is not ok to keep broken tests like this in the test suite, so I am
        filing this bug to mark those tests as expected failures.  I have done
        a weak attempt at seeing if the tests could be fixed, but it doesn't
        seem that easy.
>How-To-Repeat:
	Run the tests in /usr/tests/fs/vfs and note that the ZFS tests above
	don't work.
>Fix:
	Dunno.  Fix the tests or the code being tested.

>Release-Note:

>Audit-Trail:
From: "Julio Merino" <jmmv@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47656 CVS commit: src/tests/fs/vfs
Date: Sat, 16 Mar 2013 05:45:37 +0000

 Module Name:	src
 Committed By:	jmmv
 Date:		Sat Mar 16 05:45:37 UTC 2013

 Modified Files:
 	src/tests/fs/vfs: t_full.c t_unpriv.c t_vnops.c

 Log Message:
 Mark a bunch of routinely-broken ZFS tests as expected failures.  Point
 them at PR kern/47656.


 To generate a diff of this commit:
 cvs rdiff -u -r1.7 -r1.8 src/tests/fs/vfs/t_full.c
 cvs rdiff -u -r1.9 -r1.10 src/tests/fs/vfs/t_unpriv.c
 cvs rdiff -u -r1.33 -r1.34 src/tests/fs/vfs/t_vnops.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Juergen Hannken-Illjes" <hannken@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47656 CVS commit: src
Date: Wed, 28 Nov 2018 09:57:59 +0000

 Module Name:	src
 Committed By:	hannken
 Date:		Wed Nov 28 09:57:59 UTC 2018

 Modified Files:
 	src/external/cddl/osnet/dist/uts/common/fs/zfs: zfs_vnops.c
 	src/tests/fs/vfs: t_unpriv.c

 Log Message:
 Add missing access check for setting va_Xtime into zfs_netbsd_setattr().

 PR kern/47656 test zfs_times.


 To generate a diff of this commit:
 cvs rdiff -u -r1.32 -r1.33 \
     src/external/cddl/osnet/dist/uts/common/fs/zfs/zfs_vnops.c
 cvs rdiff -u -r1.13 -r1.14 src/tests/fs/vfs/t_unpriv.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Juergen Hannken-Illjes" <hannken@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47656 CVS commit: src
Date: Wed, 28 Nov 2018 09:58:58 +0000

 Module Name:	src
 Committed By:	hannken
 Date:		Wed Nov 28 09:58:58 UTC 2018

 Modified Files:
 	src/external/cddl/osnet/dist/uts/common/fs/zfs: zfs_vnops.c
 	src/tests/fs/vfs: t_unpriv.c

 Log Message:
 Add missing access check for REMOVE into zfs_netbsd_lookup().

 PR kern/47656 test zfs_dirperms.


 To generate a diff of this commit:
 cvs rdiff -u -r1.33 -r1.34 \
     src/external/cddl/osnet/dist/uts/common/fs/zfs/zfs_vnops.c
 cvs rdiff -u -r1.14 -r1.15 src/tests/fs/vfs/t_unpriv.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Juergen Hannken-Illjes" <hannken@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47656 CVS commit: src
Date: Wed, 28 Nov 2018 10:01:29 +0000

 Module Name:	src
 Committed By:	hannken
 Date:		Wed Nov 28 10:01:28 UTC 2018

 Modified Files:
 	src/external/cddl/osnet/dist/uts/common/fs/zfs: zfs_vnops.c
 	src/tests/fs/vfs: t_unpriv.c

 Log Message:
 Redo the access check for setting va_flags in zfs_netbsd_setattr().

 Use user flag UF_NODUMP instead of UF_IMMUTABLE for the test as it
 is the only user flag supported by all tested file systems.

 PR kern/47656 test zfs_flags.


 To generate a diff of this commit:
 cvs rdiff -u -r1.34 -r1.35 \
     src/external/cddl/osnet/dist/uts/common/fs/zfs/zfs_vnops.c
 cvs rdiff -u -r1.15 -r1.16 src/tests/fs/vfs/t_unpriv.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Juergen Hannken-Illjes" <hannken@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47656 CVS commit: src/tests/fs/vfs
Date: Fri, 30 Nov 2018 09:52:40 +0000

 Module Name:	src
 Committed By:	hannken
 Date:		Fri Nov 30 09:52:39 UTC 2018

 Modified Files:
 	src/tests/fs/vfs: t_full.c

 Log Message:
 Skip zfs, it does not GOP_ALLOC.

 PR kern/47656 test zfs_fillfs.


 To generate a diff of this commit:
 cvs rdiff -u -r1.9 -r1.10 src/tests/fs/vfs/t_full.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: hannken@NetBSD.org
State-Changed-When: Thu, 13 Dec 2018 10:26:16 +0000
State-Changed-Why:
Atf now passes all ZFS tests.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.